--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "short_name": "Twittor",
     "name": "Twittor para Hèroes",
-    "description":"Twittor es Jesús🔥!!!. Quisieras instalarlo?",
+    "description":"Twittor es Jesús🔥!!!. Quieres instalarlo?",
     "icons": [
         {
             "src": "img/icons/icon-48x48.png",
